--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
+language: node_js
 services:
   - docker
-git:
-  depth: true
-  quiet: true
 install:
   - git clone https://github.com/mapbox/tippecanoe.git tippecanoe
   - cd tippecanoe
