Add mbtiles dockerfile (#2)
Add mbtiles-server with tippecanoe

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,9 @@ jobs:
         - docker build -t "${DOCKER_USERNAME}/${TIPPECANOE}:latest" -t "${DOCKER_USERNAME}/${TIPPECANOE}:$(cat ~/release)" .
         - docker push "${DOCKER_USERNAME}/${TIPPECANOE}:latest"
         - docker push "${DOCKER_USERNAME}/${TIPPECANOE}:$(cat ~/release)"
+    - stage: mbtiles docker push
+      script:
+        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+        - docker build -t "${DOCKER_USERNAME}/${MBTILES}:latest" -f Dockerfile.mbtiles .
+        - 'if [[ "$TRAVIS_PULL_REQUEST" = "false" && "$TRAVIS_BRANCH" = "master" ]];then
+        docker push "${DOCKER_USERNAME}/${MBTILES}:latest"; fi'
