Copy tile-join for mbtiles

--- a/Dockerfile.mbtiles
+++ b/Dockerfile.mbtiles
@@ -5,6 +5,7 @@ LABEL maintainer="Mikhail Orlov <miklergm@gmail.com>"
 FROM deniscarriere/mbtiles-server
 
 COPY --from=0 /usr/bin/tippe* /usr/local/bin/
+COPY --from=0 /usr/bin/tile* /usr/local/bin/
 
 RUN apk add --no-cache libgcc libstdc++ sqlite-libs
 
