--- a/.travis.yml
+++ b/.travis.yml
@@ -29,5 +29,7 @@ jobs:
       script:
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         - docker build -t "${DOCKER_USERNAME}/${MBTILES}:latest" -f Dockerfile.mbtiles .
+        - docker build -t "${DOCKER_USERNAME}/${MBTILESPSQL}:latest" -f Dockerfile.mbtiles-psql .
         - 'if [[ "$TRAVIS_PULL_REQUEST" = "false" && "$TRAVIS_BRANCH" = "master" ]];then
-        docker push "${DOCKER_USERNAME}/${MBTILES}:latest"; fi'
+        docker push "${DOCKER_USERNAME}/${MBTILES}:latest";
+        docker push "${DOCKER_USERNAME}/${MBTILESPSQL}:latest"; fi'
